
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(uuid C)
SET(uuid_VERSION_MAJOR 1)
SET(uuid_VERSION_MINOR 0)
SET(uuid_VERSION_PATCH 0)
SET(uuid_VERSION_TWEAK 0)

SET(TMP_PROJECT_DESCRIPTION "UUID Implementation for Embedded Systems"
        CACHE STRING "Project Description")

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE("crypto" REQUIRED)

FILE(GLOB SOURCES *.c)
FILE(GLOB HEADERS *.h)
ADD_PLATFORM_LIBRARY(uuid STATIC "crypto" ${SOURCES})
INSTALL_PLATFORM_LIBRARY(uuid ${HEADERS})
