
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(uuid C)

set(PROJECT_DESCRIPTION     "UUID Implementation for Embedded Systems")
set(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
set(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
set(PROJECT_LICENSE         "GPLv3")
set(PROJECT_VERSION_MAJOR   1)
set(PROJECT_VERSION_MINOR   1)
set(PROJECT_VERSION_PATCH   0)
set(PROJECT_VERSION_TWEAK   0)

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE("crypto" REQUIRED)
FIND_PACKAGE("printf" REQUIRED)

SET(SOURCES uuid.c)
SET(SOURCES uuid.h)

ADD_PLATFORM_LIBRARY(uuid STATIC "crypto printf" ${SOURCES})
INSTALL_PLATFORM_LIBRARY(uuid ${HEADERS})
