CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
CMAKE_POLICY(SET CMP0007 NEW)

SET(FIRMWARE_NAME uuid-test-firmware)

PROJECT(${FIRMWARE_NAME} C)

SET(PROJECT_DESCRIPTION     "Test firmware for the UUID library")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 1)
SET(PROJECT_VERSION_PATCH 0)
SET(PROJECT_VERSION_TWEAK 0)

INCLUDE(ebs/exe-conf)

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(bsp)
ADD_SUBDIRECTORY(sys)
ADD_SUBDIRECTORY(app)

INSTALL(SCRIPT default-install.cmake)
